welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:5: error: not found: value nBiscuit
while (2*nBiscuit!=casesOrange+1){
         ^